Two big changes.  1. A new approach to avoiding memory bloat when running repeated/scheduled tasks.  When we start a new run, we now first send a message to the mainpanel asking it to wrap up whatever it's doing, send the last of its data to the server, then reload the page, and only then actually start a new run.  2. A UI for deleting previously scheduled runs -- before, one had to use the JS console to remove them.  The UI available now is bad, but it functions.

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -161,6 +161,16 @@ h4 {
 	background-color: DBDBDB;
 }
 
+.scheduled_script_run{
+	margin-bottom: 5px;
+	padding: 10px;
+	border: solid 1px #E8E8E8;
+	background-color: #F0F0F0;
+}
+.scheduled_script_run:hover{
+	background-color: DBDBDB;
+}
+
 .troubleshooting_option{
 	background-color: #ffffff;
 	padding: 5px;
